--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "heroku": "^7.59.0",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
+    "nodemailer": "^6.7.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
