--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
+    "express-validator": "^6.13.0",
     "heroku": "^7.59.0",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
